--- a/public/src/less/block/game.less
+++ b/public/src/less/block/game.less
@@ -133,6 +133,7 @@
 		top: -36px;
 		margin-left: -78px;
 		left: 100%;
+		z-index: 1;
 		.icon-star{
 			position: absolute;
 			top:25px;
